Updating more commenting

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,13 @@
 # Don’t commit the following directories created by pub.
 .buildlog
 .DS_Store
-.packages
 .pub/
 .vscode/
 build/
+
+.packages
 packages
+packages/
 
 # Or the files created by dart2js.
 *.dart.js
