--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,3 +8,6 @@ dependencies:
   build_web_compilers: ^0.4.0
   OpenSimplexNoiseDart:
     git: git://github.com/Grant-Nelson/OpenSimplexNoiseDart.git
+
+dev_dependencies:
+  webdev: ^1.0.0
