--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,12 @@
 name: ThreeDart
-version: 0.0.2
+version: 0.0.3
 description: 3D graphical rendering tool for websites written in Dart.
 environment:
   sdk: '>=2.0.0'
 
 dependencies:
-  build_runner: ^0.10.0
+  build_runner: ^1.0.0
+  build_test: ^0.10.2
   build_web_compilers: ^0.4.0
   OpenSimplexNoiseDart:
     git: git://github.com/Grant-Nelson/OpenSimplexNoiseDart.git
