--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,9 +7,11 @@ environment:
 dependencies:
   build_runner: ^1.0.0
   build_test: ^0.10.2
-  build_web_compilers: ^0.4.0
+  build_web_compilers: ^2.4.0
   OpenSimplexNoiseDart:
     git: git://github.com/Grant-Nelson/OpenSimplexNoiseDart.git
+  PatiteParserDart:
+    git: git://github.com/Grant-Nelson/PatiteParserDart.git
 
 dev_dependencies:
   webdev: ^1.0.0
