Update package name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,8 @@ dependencies:
   build_web_compilers: ^2.4.0
   OpenSimplexNoiseDart:
     git: git://github.com/Grant-Nelson/OpenSimplexNoiseDart.git
-  PatiteParserDart:
-    git: git://github.com/Grant-Nelson/PatiteParserDart.git
+  PetiteParserDart:
+    git: git://github.com/Grant-Nelson/PetiteParserDart.git
 
 dev_dependencies:
   webdev: ^1.0.0
